--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 85: Got the Juice - Flo Milli
+          Week 86: SPAGHETTII - Beyonce
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.0/10</h2>
+            <h2 id="rating">Overall Rating 9.2/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/4cDMiCvsWskTW4LHtZqscq?si=8f5c8605ab844f11"
+                    href="https://open.spotify.com/track/5UcUppRaEIBMIHXiUFl7LI?si=718ad39ba73d4ca9"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=qZbpYDKEH3o"
+                    href="https://www.youtube.com/watch?v=MxNMvZ5BhSU"
                     target="_blank"
                     ><center>
                       <img
@@ -141,26 +141,26 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I am adapting this section to just talk about the length of all
-              songs on this album so deal with it. While this song is actually
-              too short in my opinion, I am quite a fan of the shortened runtime
-              on this full length LP. Lots of rap songs in this day and age
-              overuse these corny choruses or bridges that just do not
-              intertwine well with the heavy lyricism of the verses. Flo Milli
-              keeps it curt with her choruses in this album and lets her verses
-              speak for themselves.
+              I mean this intro just hooks me every time. The world hasn't heard
+              Beyonce rap in too long, it's beyond due for her. She plays up the
+              theatrics of the turning point of this album well before finally
+              getting into the verse.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              NEW FLO!! To be completely transparent, I forgot that Flo Milli's
-              new album was dropping this last week. What a great surprise it
-              was, though, as this album is cohesively her best. She sounds very
-              developed on both the RnB tracks and the more rap-heavy tracks
-              that span this album. She seems to be finally getting the
-              recognition she deserves in this industry; Her production value on
-              this project has improved greatly because of it. With another
-              impressive album, she has still never let me down. Give this one a
-              listen and make it a great week!
+              Beyonce is here with her act II following 2022's "RENAISSANCE".
+              With the former homaging to dance and house music, "COWBOY CARTER"
+              unsurprisingly pays its homage to the country and American folk
+              genre. The first half of this album is a solid, modern-age take on
+              the country genre, with a couple of covers and cameos by the
+              greats of classical country. Only with the start of this song,
+              halfway through the album, this omage album becomes something
+              entirely derivative of its original intent. Here with
+              "SPAGHETTII", for example, a hip-hop heavy hitter evident of her
+              Houston upbringing, then later songs combine R&B, pop, and
+              electronic production with the classical twang of the acoustic
+              guitar. I could go on, but I should let you take it from here.
+              Give this one a listen and make it a great week!
             </p>
           </div>
         </div>
@@ -194,18 +194,18 @@
         <div id="celebSotW">
           <div class="divider"><center>Celebrity Song of the Week</center></div>
           <h2 style="font-size: 30px" id="title">
-            Ayla Garbe: Love T.K.O. - Teddy Pendergrass
+            Omar Mejia: Levii's Jeans - Beyonce, Post Malone
           </h2>
           <div class="row">
             <div class="column">
-              <h2 id="rating">Overall Rating 10/10</h2>
+              <h2 id="rating">Overall Rating 9.7/10</h2>
             </div>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/3IVaPHncIZWWNjfg29HVLq?si=c51fe54d84e8461c"
+                    href="https://open.spotify.com/track/2UDARQiksl207HcSduDpov?si=4ab54b2c8c7147c4"
                     target="_blank"
                     ><center>
                       <img
@@ -219,7 +219,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=Pb4j2UqkOJ0"
+                    href="https://www.youtube.com/watch?v=esnhbIbQHgM"
                     target="_blank"
                     ><center>
                       <img
@@ -236,15 +236,13 @@
           </div>
           <h2>Overall Review</h2>
           <p id="celebOverall">
-            This song brings me absolute joy from the first note to the last. In
-            my recent deep dive into some 70’s/80’s soul music, this particular
-            tune stuck with me so heavily and made its way to my daily rotation.
-            The song feels like taking a deep breath. I could truly listen to
-            the instrumental only and love this song just as much, but with Mr.
-            Pendergrass’s passionate vocals this track becomes the definition of
-            perfect for me. I highly recommend giving this classic song a listen
-            if you haven’t already, and maybe take a dive into the pioneers of
-            the r&b/hip-hop sound as well!
+            I instantly fell in love with this song the first time I heard it.
+            Although this song only released a few days ago, it has been stuck
+            on repeat (as well as the rest of the album). I was absolutely
+            stunned when I heard the reference to Lady Marmalade in the first
+            verse. Beyonce's albums never disappoint and are always spectacular.
+            If you haven't given Cowboy Carter a listen to, what are you waiting
+            for?!
           </p>
         </div>
         <div class="divider"><center>Songs of the Week Spotify</center></div>
@@ -687,6 +685,11 @@
               <td>84</td>
               <td>Crushed Velvet - Molly Lewis, Thee Sacred Souls</td>
               <td>8.4/10</td>
+            </tr>
+            <tr>
+              <td>85</td>
+              <td>Got the Juice - Flo Milli</td>
+              <td>9.0/10</td>
             </tr>
           </table>
         </div>
