--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 86: SPAGHETTII - Beyonce
+          Week 87: Good Luck, Babe! - Chappell Roan
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 9.2/10</h2>
+            <h2 id="rating">Overall Rating 8.7/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/5UcUppRaEIBMIHXiUFl7LI?si=718ad39ba73d4ca9"
+                    href="https://open.spotify.com/track/0WbMK4wrZ1wFSty9F7FCgu?si=c7a09f9bf8284f81"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=MxNMvZ5BhSU"
+                    href="https://www.youtube.com/watch?v=1RKqOmSkGgM"
                     target="_blank"
                     ><center>
                       <img
@@ -141,26 +141,20 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              I mean this intro just hooks me every time. The world hasn't heard
-              Beyonce rap in too long, it's beyond due for her. She plays up the
-              theatrics of the turning point of this album well before finally
-              getting into the verse.
+              Chappell Roan's voice goes to insane lengths in this track.
+              Remaining in the highest of notes for such an extended time, her
+              vocals are extremely impressive.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              Beyonce is here with her act II following 2022's "RENAISSANCE".
-              With the former homaging to dance and house music, "COWBOY CARTER"
-              unsurprisingly pays its homage to the country and American folk
-              genre. The first half of this album is a solid, modern-age take on
-              the country genre, with a couple of covers and cameos by the
-              greats of classical country. Only with the start of this song,
-              halfway through the album, this omage album becomes something
-              entirely derivative of its original intent. Here with
-              "SPAGHETTII", for example, a hip-hop heavy hitter evident of her
-              Houston upbringing, then later songs combine R&B, pop, and
-              electronic production with the classical twang of the acoustic
-              guitar. I could go on, but I should let you take it from here.
-              Give this one a listen and make it a great week!
+              After lots and lots of positive propaganda from friends and the
+              whole of the internet, I finally let Chappell Roan invade my
+              headphones this week. While most of my listening hours have
+              consisted of this song and "Red Wine Supernova", I do intend to
+              delve deeper into her discography soon. Leaks of this song have
+              been pervasive within my TikTok for you page this week, and I have
+              really fallen in love with the whole idea behind this song and how
+              it is presented. Give this one a listen and make it a great week!
             </p>
           </div>
         </div>
@@ -690,6 +684,11 @@
               <td>85</td>
               <td>Got the Juice - Flo Milli</td>
               <td>9.0/10</td>
+            </tr>
+            <tr>
+              <td>86</td>
+              <td>SPAGHETTII - Beyonce</td>
+              <td>9.2/10</td>
             </tr>
           </table>
         </div>
