--- a/songs.html
+++ b/songs.html
@@ -21,7 +21,7 @@
           style="font-size: 30px; margin-left: 10px; margin-right: 10px"
           id="title"
         >
-          Week 87: Good Luck, Babe! - Chappell Roan
+          Week 88: Connect - Vampire Weekend
         </h2>
         <div id="buttonPopup" hidden>
           <div id="sotwOverlay"></div>
@@ -60,13 +60,13 @@
               alt="Cover art for Song of the Week"
               height="250"
             />
-            <h2 id="rating">Overall Rating 8.7/10</h2>
+            <h2 id="rating">Overall Rating 8.4/10</h2>
             <div class="column">
               <center><h2>Listen Here</h2></center>
               <div class="row">
                 <div class="column">
                   <a
-                    href="https://open.spotify.com/track/0WbMK4wrZ1wFSty9F7FCgu?si=c7a09f9bf8284f81"
+                    href="https://open.spotify.com/track/3Oko2TgOzXPLlE2dbbsNKV?si=c476d6f92c9d47a2"
                     target="_blank"
                     ><center>
                       <img
@@ -80,7 +80,7 @@
                 </div>
                 <div class="column">
                   <a
-                    href="https://www.youtube.com/watch?v=1RKqOmSkGgM"
+                    href="https://www.youtube.com/watch?v=8-ImL4iU9-M"
                     target="_blank"
                     ><center>
                       <img
@@ -141,20 +141,22 @@
           <div class="column">
             <h2>Fav Part of Song</h2>
             <p id="favPart">
-              Chappell Roan's voice goes to insane lengths in this track.
-              Remaining in the highest of notes for such an extended time, her
-              vocals are extremely impressive.
+              I was completely unfamiliar to Vampire Weekend's sound before this
+              album. I really enjoy the softness of the production and vocals,
+              I'm not sure if this is a newer sound for them or if its the same
+              old music as they've been making for many years now, but it's
+              novel for me at least.
             </p>
             <h2>Overall Review</h2>
             <p id="overall">
-              After lots and lots of positive propaganda from friends and the
-              whole of the internet, I finally let Chappell Roan invade my
-              headphones this week. While most of my listening hours have
-              consisted of this song and "Red Wine Supernova", I do intend to
-              delve deeper into her discography soon. Leaks of this song have
-              been pervasive within my TikTok for you page this week, and I have
-              really fallen in love with the whole idea behind this song and how
-              it is presented. Give this one a listen and make it a great week!
+              My truth as a music enthusiast has been uprooted in the past
+              weeks, as I've discovered that Vampire Weekend is not another
+              2000's pop punk band as I had assumed, but a rather incredible
+              indie pop/alt rock sound. That being said, I listened to only
+              their latest album and I have extremely limited knowledge of their
+              past work. I really enjoyed this album and I now have to hear more
+              of them. I legitametely thought they were like another Imagine
+              Dragons. Anyways, I hope you make it a great week!!
             </p>
           </div>
         </div>
@@ -689,6 +691,11 @@
               <td>86</td>
               <td>SPAGHETTII - Beyonce</td>
               <td>9.2/10</td>
+            </tr>
+            <tr>
+              <td>87</td>
+              <td>Good Luck, Babe! - Chappell Roan</td>
+              <td>8.7/10</td>
             </tr>
           </table>
         </div>
